--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -12,8 +12,10 @@ serenity = { version = "0.11.5", default-features = false, features = [
     "rustls_backend",
     "model",
     "collector",
+    "framework",
+    "standard_framework"
 ] }
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
 dotenv = { version = "0.15.0" }
 tracing-subscriber = "0.3.15"
 tracing = "0.1.36"
