--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -20,3 +20,7 @@ tracing = "0.1.36"
 rusqlite = "0.28.0"
 r2d2_sqlite = "0.21.0"
 r2d2 = "0.8.10"
+axum = "0.5.15"
+serde = "1.0.143"
+anyhow = "1.0.60"
+uuid = { version = "1.1.2", features = ["v4", "serde"] }
