--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -24,3 +24,4 @@ axum = "0.5.15"
 serde = "1.0.143"
 anyhow = "1.0.60"
 uuid = { version = "1.1.2", features = ["v4", "serde"] }
+tower-http = { version = "0.3.4", features = ["trace"] }
