--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -25,3 +25,4 @@ serde = "1.0.143"
 anyhow = "1.0.60"
 uuid = { version = "1.1.2", features = ["v4", "serde"] }
 tower-http = { version = "0.3.4", features = ["trace"] }
+dashmap = "5.3.4"
