--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -27,3 +27,4 @@ uuid = { version = "1.1.2", features = ["v4", "serde"] }
 tower-http = { version = "0.3.4", features = ["trace"] }
 dashmap = "5.3.4"
 axum-server = "0.4.2"
+tokio-graceful-shutdown = "0.10.1"
